pkl-core/src/test/files/LanguageSnippetTests/input/errors/abstractMemberNotImplemented3.pkl
abstract class AbstractPropertiesAndMethods {
  abstract foo: Int
  abstract bar: Int
  abstract function foo(): Int
  abstract function bar(): Int
}

class MyClass extends AbstractPropertiesAndMethods {}

foo: MyClass
